--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "babel-preset-react-app": "^3.1.0",
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-react-views": "0.10.4",
     "lob": "^4.1.1",
     "morgan": "^1.9.0",
+    "nodemon": "^1.12.1",
     "pug": "^2.0.0-rc.4",
     "stripe": "^5.3.0"
   },
