--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lob": "^4.1.1",
     "morgan": "^1.9.0",
     "pug": "^2.0.0-rc.4",
+    "react-s3-uploader": "^4.5.1",
     "stripe": "^5.3.0"
   },
   "devDependencies": {
