--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.9.0",
     "pug": "^2.0.0-rc.4",
     "react-s3-uploader": "^4.5.1",
-    "stripe": "^5.3.0"
+    "stripe": "^5.3.0",
+    "nodemon": "^1.12.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
