--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "nodemon"
+    "start": "node index.js",
+    "start:dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -15,18 +16,15 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/idaliaramos/mailapi#readme",
   "dependencies": {
-    "babel-preset-react-app": "^3.1.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "express-react-views": "0.10.4",
     "lob": "^4.1.1",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4",
+    "multer": "^1.3.0",
     "react-s3-uploader": "^4.5.1",
-    "stripe": "^5.3.0",
-    "nodemon": "^1.12.1"
+    "stripe": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
