added keys thursday 7th

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "test",
     "start": "node index.js",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "knex": "knex",
+    "reset-db": "npm run knex migrate:rollback && npm run knex migrate:latest && npm run knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -20,9 +22,11 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "knex": "^0.13.0",
     "lob": "^4.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "pg": "^7.4.0",
     "react-s3-uploader": "^4.5.1",
     "stripe": "^5.3.0"
   },
