--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PGHOST=localhost
-PGDATABASE=mailapi_dev
-PGUSER=mailapi_admin
-PGPASSWORD=mail
+PGDATABASE=platypost_dev
+PGUSER=platypost_admin
+PGPASSWORD=master
 SECRET_KEY=sk_test_qEAbjzReKudJjfEw3oE9EMxj
 PUBLISHABLE_KEY=pk_test_maSJzpsEAisC3LrcQtV6Tvqn
 AWS_ACCESS_KEY_ID=AKIAIIHEQYFHMCQ7HUDQ
