--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ PGUSER=platypost_admin
 PGPASSWORD=master
 SECRET_KEY=sk_test_qEAbjzReKudJjfEw3oE9EMxj
 PUBLISHABLE_KEY=pk_test_maSJzpsEAisC3LrcQtV6Tvqn
-AWS_ACCESS_KEY_ID=AKIAIIHEQYFHMCQ7HUDQ
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID =AKIAIJZULTHVD5MZV6VQ;
+AWS_SECRET_ACCESS_KEY =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;
