--- a/package.json
+++ b/package.json
@@ -18,17 +18,29 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/idaliaramos/mailapi#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "boom": "^7.1.1",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
+    "enzyme": "^3.2.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
+    "gm": "^1.23.0",
+    "jest": "^21.2.1",
     "knex": "^0.13.0",
     "lob": "^4.1.1",
+    "lodash.isfunction": "^3.0.8",
+    "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "pg": "^7.4.0",
+    "pluralize": "^7.0.0",
+    "promisify": "0.0.3",
     "react-s3-uploader": "^4.5.1",
-    "stripe": "^5.3.0"
+    "stripe": "^5.3.0",
+    "yup": "^0.23.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
