--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^21.2.1",
     "knex": "^0.13.0",
     "lob": "^4.1.1",
+    "lodash.defer": "^4.1.0",
     "lodash.isfunction": "^3.0.8",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
