--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "test",
     "start": "node index.js",
-    "start:dev": "nodemon",
+    "start:dev": "nodemon index.js",
     "knex": "knex",
     "reset-db": "npm run knex migrate:rollback && npm run knex migrate:latest && npm run knex seed:run"
   },
