--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "send snail mail withoug leaving your chair",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "start": "node index.js",
     "start:dev": "nodemon index.js",
     "knex": "knex",
@@ -35,13 +35,16 @@
     "lodash.isfunction": "^3.0.8",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
+    "mocha": "^4.0.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "node-mocks-http": "^1.6.6",
     "pg": "^7.4.0",
     "pluralize": "^7.0.0",
     "promisify": "0.0.3",
     "react-s3-uploader": "^4.5.1",
     "stripe": "^5.3.0",
+    "supertest": "^3.0.0",
     "yup": "^0.23.0"
   },
   "devDependencies": {
